[package]
name = "liquid-staking-program"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "~1.16.0"
spl-token = "4.0"
spl-associated-token-account = "2.2"
borsh = "0.10"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dev-dependencies]
anchor-client = "0.29.0"
solana-sdk = "~1.16.0"
tokio = { version = "1.0", features = ["full"] } 